Fixing fonts on iPhone again

--- a/WebRoot/css/index.css
+++ b/WebRoot/css/index.css
@@ -93,7 +93,7 @@ p {
 }
 
 code {
-    font-family: "FantasqueSansMonoRegular" monospace;
+    font-family: "FantasqueSansMonoRegular", monospace;
 }
 
 li {
